feat: enhance mobile-first design with compact hero layout
- Reduce fluid typography scale for mobile (8xl, 9xl) for better hierarchy
- Redesign Hero with overlapping profile image on mobile (floating top-right)
- Add text shadows and background accents for readability over photo
- Reduce About section body text size from 2xl to lg
- Add SunLife Enterprise Award to Education component
- Remove College projects section (focusing on professional work)
- Update location info (removed Sydney relocation from CV and portfolio data)
- Adjust spacing and image sizing for mobile-desktop breakpoints

--- a/resources/CV.tex
+++ b/resources/CV.tex
@@ -178,7 +178,7 @@
 
 \section{Summary}
 \small{
-  DevOps Engineer with 5+ years of experience in optimizing DevOps pipelines, continuous deployments, and cloud infrastructure migrations. Proficient in AWS, recognized for technical excellence, and holding a first-class honors BSc in the Internet of Things. Currently at Mineral Resources, designing scalable cloud solutions and automation frameworks. Relocating to Sydney on 24th February due to my partner’s job offer and available for a remote first interview.
+  DevOps Engineer with 5+ years of experience in optimizing DevOps pipelines, continuous deployments, and cloud infrastructure migrations. Proficient in AWS, recognized for technical excellence, and holding a first-class honors BSc in the Internet of Things. Currently at Mineral Resources in Perth, designing scalable cloud solutions and automation frameworks across 95 AWS accounts.
 }
 %--------------------------------------------
 
