docs: update email address to contact@lukehalley.com
Replace personal Gmail address with professional contact email
across all documentation and CV files for consistent branding.

--- a/resources/CV.tex
+++ b/resources/CV.tex
@@ -167,7 +167,7 @@
   \href{https://www.linkedin.com/in/luke-halley-284b9b115/}{\uline{LinkedIn}} $|$ % row = 2, col = 1
   \href{https://github.com/lukehalley}{\uline{GitHub}} $|$ % row = 2, col = 1
   \href{https://gitlab.com/lukehalley}{\uline{Gitlab}} & % row = 2, col = 1
-  Email: \href{mailto:luke123halley@gmail.com}{\uline{luke123halley@gmail.com}} $|$ % row = 2, col = 2
+  Email: \href{mailto:contact@lukehalley.com}{\uline{contact@lukehalley.com}} $|$ % row = 2, col = 2
   Mobile: +61448306369 \\ % row = 2, col = 2
 \end{tabular*}
 %--------------------------------------------
